@@ -1,6 +1,8 @@
 2005-12-10 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
-	* scripts/pkginfo.in: Removed occurences of .pkg extensions
+	* scripts/libprometheus.bash.in, scripts/pkgget.in, scripts/pkgrm.in:
+	  Cleaned up `source_profile' invocations, other cleanups.
+	* scripts/pkginfo.in: Removed occurences of .pkg extensions.
 
 2005-12-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
